# sercli

./: .env  .rustfmt.toml  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  rust-toolchain.toml
.github/workflows/: build.yml
client/: Cargo.toml
client/src/: main.rs
model/: Cargo.toml  build.rs
model/migrations/: 2024_07_29_create_users_table.sql  20250324125421_create_users_table.sql  20250327190421_create_wallets_table.sql  20250329110321_add_birthday_to_users.sql  2025_03_24_12-54-21_create_users_table.sql
model/src/: lib.rs  requests.rs  user.rs
model/src/entities/: mod.rs  user.rs  wallet.rs  wallet_type.rs
sercli/: Cargo.toml
sercli/src/: entity.rs  field_extension.rs  lib.rs  password.rs  request.rs  user.rs  utils.rs
sercli/src/client/: api.rs  mod.rs  request.rs
sercli/src/db/: migration.rs  mod.rs  postgres_config.rs
sercli/src/server/: access_token.rs  authorize_request.rs  authorized_user.rs  backend.rs  compose.rs  crud.rs  db_storage.rs  errors_handling.rs  handle.rs  header_map_utils.rs  mod.rs  server.rs
sercli/src/server/crud/: crud.rs  crud_request.rs  entity.rs  mod.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  requests.rs  server.rs  user_requests.rs  wallet_requests.rs
tests/: Cargo.toml
tests/src/: main.rs
