[workspace]
default-members = ["sercli"]
members = ["sercli", "model", "server", "client"]

resolver = "2"

[workspace.metadata.cargo-machete]
ignored = []

[workspace.dependencies]
Inflector = "0.11"
anyhow = "1.0"
argon2 = "0.6.0-pre.1"
axum = { version = "0.8", features = ["macros"] }
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "from"] }
fake = "4.2"
log = "0.4"
reflected = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.55"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }

tain = "0.4.0"

generator = { path = "deps/generator" }
utils = { path = "deps/utils" }

model = { path = "model" }
server = { path = "server" }

sercli = { path = "sercli" }

[patch.crates-io]
#tain = { path = "../tain/tain" }
#reflected = { path = "../reflected/reflected" }
