[workspace]
default-members = ["sercli"]
members = ["sercli", "model", "server", "client"]

resolver = "2"

[workspace.metadata.cargo-machete]
ignored = []

[workspace.dependencies]
Inflector = "0.11"
anyhow = "1.0"
argon2 = "0.6.0-pre.1"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "from"] }
fake = "4.2"
log = "0.4"
pasetors = "0.7"
reflected = "0.21"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rust_decimal = { version = "1.37", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sqlparser = "0.55"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "rust_decimal", "chrono"] }
strum = { version = "0.27", features = ["derive", "strum_macros"] }
tokio = { version = "1.44", features = ["macros", "rt-multi-thread", "tracing"] }

generator = { path = "deps/generator" }
sercli_utils = { path = "deps/utils" }

model = { path = "model" }
server = { path = "server" }


sercli = { path = "sercli" }

[patch.crates-io]
#reflected = { path = "../reflected/reflected" }
