[package]
edition = "2024"
name = "model"
version = "0.1.0"

[lib]
crate-type = ["rlib", "staticlib"]
name = "model"

[dependencies]
anyhow = { workspace = true }
sercli = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
sercli = { workspace = true }
tokio = { workspace = true }
