[package]
edition = "2024"
name = "model"

[lib]
crate-type = ["rlib", "staticlib"]
name = "model"

[dependencies]
anyhow = { workspace = true }
sercli = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
sercli = { workspace = true }
tokio = { workspace = true }
