[package]
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Server client interactions"
edition = "2024"
homepage = "https://github.com/VladasZ/sercli"
license = "MIT OR Apache-2.0"
name = "sercli"
repository = "https://github.com/VladasZ/sercli"
version = "0.1.0"

[lib]
crate-type = ["rlib", "staticlib"]
name = "sercli"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-login = { workspace = true }
log = { workspace = true }
password-auth = { workspace = true }
reflected = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tain = { workspace = true }
tokio = { workspace = true }

generator = { workspace = true }
