[package]
authors = ["Vladas Zakrevksis <146100@gmail.com>"]
description = "Server client interactions"
edition = "2024"
homepage = "https://github.com/VladasZ/sercli"
license = "MIT OR Apache-2.0"
name = "sercli"
repository = "https://github.com/VladasZ/sercli"

[lib]
crate-type = ["rlib", "staticlib"]
name = "sercli"

[dependencies]
Inflector = { workspace = true }
anyhow = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
derive_more = { workspace = true }
fake = { workspace = true }
log = { workspace = true }
pasetors = { workspace = true }
reflected = { workspace = true }
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }

generator = { workspace = true }
sercli_utils = { workspace = true }
