[package]
edition = "2021"
name = "server"
version = "0.1.0"

[[bin]]
name = "server"

[lib]
crate-type = ["rlib", "staticlib"]
name = "server"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
sercli = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }

model = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
sercli = { workspace = true }
tokio = { workspace = true }
