[package]
edition = "2024"
name = "server"

[[bin]]
name = "server"

[lib]
crate-type = ["rlib", "staticlib"]
name = "server"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
sercli = { workspace = true }
sqlx = { workspace = true }

model = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
sercli = { workspace = true }
tokio = { workspace = true }
